[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/projectiles/explosion_atlas.png" type="Texture" id=1]
[ext_resource path="res://weapons/Aoe.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/water_blast_projectile_spell_02.wav" type="AudioStream" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0
height = 0.0

[sub_resource type="CanvasItemMaterial" id=2]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 3
particles_anim_loop = true

[node name="ExplosionPool" type="Position2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -12.296

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 2 )
amount = 10
lifetime = 4.0
explosiveness = 1.0
randomness = 1.0
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 16.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity_random = 0.25
damping = 46.9
damping_random = 0.17
scale_amount = 0.5
anim_speed = 3.0
anim_offset = 1.0
anim_offset_random = 1.0

[node name="DmgTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Lifetime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="DmgTimer" to="." method="_on_DmgTimer_timeout"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
